[package]
name = "ron-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = { git = "https://github.com/ron-rs/ron" }
ron-reboot = { git = "https://github.com/ron-rs/ron-reboot" }
serde_json = "*"
